# smartphoneremote_ue5

./: .gitignore  75227 - Racing Assets v1 - License.html  83513 - LICENSE.html  CMakeLists.txt  CameraSettings.yaml  DeviceTracking.cpp  LICENSE  README.md  WSImageTest.cpp  __init__.py  addon_updater.py  addon_updater_ops.py  arcore.py  compiling_error.txt  environment.py  operators.py  png.py  preference.py  requirements.txt  settings.py  smartphoneremote_ue5_reciever.py  sr_client.py  sr_daemon.py  sr_settings.py  tback.py  test.blend
examples/: 78390 - X-Wing (untextured) - License.html  91660 - LICENSE.html  X-Wing.blend  X-Wing.blend1  Yak-3.blend  example.blend  light_demo.blend  parent.blend  sample.blend  sample_camera.blend  sample_camera.blend1  untitled.blend  untitled.blend1
python/: ORBSLAM2BLENDER.py  __init__.py  async_loop.py  blender_remote.py  httpd.py  ws_client.py
python/addons/io_smartphone_remote/: ORBSLAM2BLENDER.py  __init__.py  async_loop.py  sr_daemon.py  sr_httpd.py  sr_sceneStream.py  sr_settings.py
python/addons/io_smartphone_remote/libs/: bsyncio.py  httpd.py
python/addons/io_smartphone_remote/libs/pyqrcode/: __init__.py  builder.py  png.py
python/addons/io_smartphone_remote/static/: index.html
python/addons/io_smartphone_remote/static/cache/: cube.gltf
python/addons/io_smartphone_remote/static/js/: IMU.js  remote.js  tracking.js  viewport.js  webrtc.js
python/libs/qrcode-6.0/: PKG-INFO  setup.cfg
static/: index.html
static/js/: Inputs.js  VideoStream.js  main.js  remote.js  tracking.js  webrtc.js
static/style/: darcula.css
